syntax = "proto3";

package stripe;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

service StripeService {
  rpc WriteStripeData(StripeRequest) returns (StripeResponse) {};
  rpc ReadStripeData(StripeRequest) returns (StripeResponse) {};
}

message StripeId {
  string stripeId = 1;
}

message StripeRequest {
  string id = 1;
  google.protobuf.Timestamp created = 2;
  StripeId stripeId = 3;
  StripeData stripeData = 4;
}

message StripeResponse {
  string id = 1;
  google.protobuf.Timestamp created = 2;
  string responseMessage = 3;
  bool success = 4;
  google.protobuf.Struct errors = 5;
}

message StripeData {
  google.protobuf.Timestamp created = 1;
  repeated StripeId subscriptionItems = 2;
  repeated StripeId customers = 3;
  repeated StripeId subscriptions = 4;
}


 