syntax = "proto3";

package ON.Fragments.Authorization.Payment;

enum SubscriptionStatus {
    Subscription_Pending = 0;
    Subscription_Active = 1;
    Subscription_Stopped = 2;
    Subscription_Paused = 3;
}

enum PaymentStatus {
    
Payment_Pending = 0;
    Payment_Complete = 1;
    Payment_Failed = 2;
    Payment_Refunded = 3;
}
